--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
-    "react-native-checkbox": "^1.1.0"
+    "react-native-check-box": "^1.0.4",
+    "react-native-vector-icons": "^0.8.5"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
