--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "purge": "./node_modules/.bin/react-native-clean-project"
   },
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-check-box": "^1.0.4",
+    "react-native-clean-project": "^1.0.4",
+    "react-native-device-info": "^0.9.9",
     "react-native-vector-icons": "^0.8.5"
   },
   "devDependencies": {
